fixed card text overflow

--- a/src/components/Ride.css
+++ b/src/components/Ride.css
@@ -1,5 +1,5 @@
 .card {
-  height: 30vw;
+  height: 100%;
 }
 
 .alignleft {
@@ -16,12 +16,12 @@
 }
 
 .profilePicDiv {
-  height: 30vw;
-  width: 30vw;
+  
+  width: 25vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 50px;
+  padding-left: 50px
 }
 
 .profilePic {
@@ -32,9 +32,5 @@
 }
 
 .cardBodyDiv {
-  width: 65vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-right: 50px;
+  width: 70vw;
 }
